fix(AVO-3990): avoid wrapping buttons in workspace
https://meemoo.atlassian.net/browse/AVO-3990

--- a/src/workspace/views/Workspace.scss
+++ b/src/workspace/views/Workspace.scss
@@ -40,4 +40,10 @@
 		max-width: 19rem;
 		width: max-content;
 	}
+
+	.c-table {
+		td:last-child {
+			white-space: nowrap
+		}
+	}
 }
